# slate-pl

./: Cargo.toml  README.md  TODO  TODO.md  pyproject.toml
slasm/: function.py  instruction.py  nasm_header.asm  program.py  slasm.py  test.py
slasm/translators/: llvm_emitter.py  nasm.py  nasm_emitter.py  xml_serializer.py
slate/: ast.py  interpreter.py  lexer.py  main.py  parser.py  slate_ast.py  slate_parser.py  typesystem.py  utilities.py
slate-pl/: Cargo.toml
slate-pl/src/: main.rs
slate-pl/src/slasm/: instruction.rs  mod.rs  prelude.rs
slate-vscode-extension/: package.json
slate-vscode-extension/syntaxes/: slate.tmLanguage.json
slate/slasm/: function.py  instruction.py  instructions.py  main.py  nasm_template.asm  program.py  slasm.py  test.py
slate/slasm/emitters/: json_emitter.py  llvm_emitter.py  nasm_emitter.py  xml_emitter.py
slate/visitors/: llvm_emitter.py  serializer.py  slasm_emitter.py  typechecker.py
src/: main.rs
src/etc/: nasm_template_linux.asm  nasm_template_macos.asm
src/include/: nasm_template_linux.asm  nasm_template_windows.asm
src/slasm/: basic_block.rs  function.rs  instruction.rs  mod.rs  prelude.rs  program.rs
tests/: slate.ast.json  slate.slt  slate.slt.asm  slate.slt.ast.json  slate.slt.ast.xml  slate.slt.ir.ll  slate.slt.slasm.xml  test  test-llvm  test.asm  test.ll  test.slasm.json  test.slasm.xml  test_copy  test_copy.asm  test_slate.py
tests/rust/: a.out  output.asm  test.linux.asm  test.slasm.json  test.slasm.xml  test_output.asm
tests/slasm/: file.asm  hi  hi.asm  nasm_template.asm  test_slasm.py
(+9 files in other folders)
